[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/combat_enemy_card.gd" id="1_script"]

[node name="CombatEnemyCard" type="PanelContainer"]
custom_minimum_size = Vector2(0, 100)
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.321569, 0.321569, 1)
text = "Enemy Name"

[node name="StatsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "HP: 100 | ATK: 10"

[node name="LootLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_font_sizes/font_size = 10
text = "Drops: ..."
autowrap_mode = 2

[node name="Actions" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="InfoBtn" type="Button" parent="MarginContainer/VBoxContainer/Actions"]
layout_mode = 2
text = "INFO"

[node name="FightBtn" type="Button" parent="MarginContainer/VBoxContainer/Actions"]
layout_mode = 2
size_flags_horizontal = 3
text = "ENGAGE"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Actions/InfoBtn" to="." method="_on_info_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Actions/FightBtn" to="." method="_on_fight_btn_pressed"]
